Add Dockerfile and enhance backend for deployment
Introduces a Dockerfile for containerized deployment. Updates Django settings for environment-based configuration, PostgreSQL support, static file handling with WhiteNoise, and CORS. Improves frontend API base URL resolution and chat context handling. Adds deployment-related dependencies to requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ requests
 numpy
 google-generativeai
 google-genai
+whitenoise
+django-cors-headers
+gunicorn
+psycopg[binary]
+python-dotenv
+owlready2
+dj_database_url
